# ML-workflow-automation-

./: .gitignore  README.md  package-lock.json
backend/: README.md  main.py  ml_server.py  pyproject.toml  setup_database.py  start-dev.ps1
backend/controllers/: __init__.py  block_controller.py  connection_controller.py  data_ingestion_controller.py  data_preprocessing_controller.py  feature_engineering_controller.py  workflow_controller.py
backend/core/: config.py
backend/db/: database.py  init.py  models.py  schema.py
backend/dependencies/: common.py
backend/docs/: API_ENDPOINTS.md  CRUD_SYSTEM_README.md
backend/routers/: blocks.py  connections.py  data_ingestion.py  data_preprocessing.py  feature_engineering.py  health.py  ml_execution.py  workflows.py
backend/schemas/: block.py  connection.py  data_ingestion.py  data_preprocessing.py  feature_engineering.py  health.py  workflow.py
backend/services/: __init__.py  workflow_service.py
backend/tests/: test_crud.py
backend/utils/: crud_base.py
frontend/: .gitignore  README.md  TROUBLESHOOTING.md  env.example  index.html  install-deps.bat  install-deps.sh  package-lock.json  package-simple.json  package.json  setup.js  test-integration.md
frontend/src/: App.tsx  main.tsx  template.md
frontend/src/components/: AISuggestions.tsx  DocumentationViewer.tsx  Navbar.tsx  Navigation.tsx
src/: __init__.py
src/feature/: __init__.py  feature_engineering.py
src/ingestion/: data_ingestion.py
src/preprocess/: data_preprocess.py
src/tes/: __init__.py  model_training_evaluation_selection.py
(+24 files in other folders)
